--- a/core/SConstruct
+++ b/core/SConstruct
@@ -5,3 +5,4 @@ SConscript('SConscript.boardloader_reflash_dev', variant_dir='build/boardloader_
 SConscript('SConscript.bootloader', variant_dir='build/bootloader', duplicate=False)
 SConscript('SConscript.firmware', variant_dir='build/firmware', duplicate=False)
 SConscript('SConscript.unix', variant_dir='build/unix', duplicate=False)
+SConscript('SConscript.test', variant_dir='build/test', duplicate=False)
