--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ inotify = "*"
 yamllint = "^1.25.0"
 vulture = "^2.6"
 base58 = "^2.1.1"
+scons-compiledb = "^0.7.4"
 
 [tool.poetry.group.dev.dependencies]
 scan-build = "*"
