--- a/core/SConstruct
+++ b/core/SConstruct
@@ -4,5 +4,6 @@ SConscript('SConscript.boardloader', variant_dir='build/boardloader', duplicate=
 SConscript('SConscript.boardloader_reflash_dev', variant_dir='build/boardloader_reflash_dev', duplicate=False)
 SConscript('SConscript.bootloader', variant_dir='build/bootloader', duplicate=False)
 SConscript('SConscript.firmware', variant_dir='build/firmware', duplicate=False)
+SConscript('SConscript.mpfirmware', variant_dir='build/mp_firmware', duplicate=False)
 SConscript('SConscript.unix', variant_dir='build/unix', duplicate=False)
 SConscript('SConscript.test', variant_dir='build/test', duplicate=False)
